Align benchmark with TCC methodology
